xform: exploration rule for insert fast path uniqueness checks
This commit moves the insert fast path uniqueness checks into an
`InsertFastPath` exploration rule.

Epic: CRDB-26290
Informs: #58047

Release note: None

--- a/pkg/sql/opt/xform/BUILD.bazel
+++ b/pkg/sql/opt/xform/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
         "general_funcs.go",
         "groupby_funcs.go",
         "index_scan_builder.go",
+        "insert_funcs.go",
         "join_funcs.go",
         "join_order_builder.go",
         "limit_funcs.go",
@@ -28,6 +29,7 @@ go_library(
         "//pkg/roachpb",
         "//pkg/sql/catalog/colinfo",
         "//pkg/sql/inverted",
+        "//pkg/sql/lexbase",
         "//pkg/sql/opt",
         "//pkg/sql/opt/cat",
         "//pkg/sql/opt/constraint",
@@ -44,6 +46,8 @@ go_library(
         "//pkg/sql/opt/partition",
         "//pkg/sql/opt/props",
         "//pkg/sql/opt/props/physical",
+        "//pkg/sql/pgwire/pgcode",
+        "//pkg/sql/pgwire/pgerror",
         "//pkg/sql/rowinfra",
         "//pkg/sql/sem/eval",
         "//pkg/sql/sem/tree",
